# Spider

./: .env  .gitignore  LICENSE  Plugin.md  README.md  ReadMe.md  analyze_entities.py  config.py  config.yaml  crawler.py  domain.py  lib.py  link_finder.py  main.py  old_main.py  pyproject.toml  requirements.txt  run_crawler.py  setup.cfg  spam_detector.py  spider.py  storage.py  utils.py  webpages.py
Data/bbc/: crawled.txt  queue.txt
Data/cnn/: crawled.txt  queue.txt
Data/foxnews/: queue.txt
Data/google/: crawled.txt  queue.txt
Exceptions/: domain.py  http.py
NewData/: bbc.json  bbc.txt
Roshan Lamichhane/: crawled.txt
client/: components.json  package-lock.json  package.json
client/pages/: index.tsx
client/styles/: globals.css
plugins/: entity_extraction.py
roshanlamichhane/: crawled.txt  queue.txt
src/spider/: analyze_entities.py  config.py  config.yaml  main.py  plugin.py  spider.py  storage.py  tasks.py
src/spider/plugins/: dynamic_scraper.py  entity_extraction.py  real_time_metrics.py  title_logger_plugin.py
